--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Alan Sarang — s3</title>
+  <title>Alan — s3</title>
   <style>
     :root{--bg:#f3f6fb;--card:#ffffff;--accent:#0ea5a3;--muted:#6b7280}
     *{box-sizing:border-box}
